kubernetes/media/couchpotato/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: couchpotato
  labels:
    name: couchpotato
