kubernetes/media/couchpotato/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchpotato
  namespace: couchpotato
spec:
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      containers:
      - name: couchpotato
        image: linuxserver/couchpotato
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: movies
          mountPath: /movies
        - name: config
          mountPath: /config
        ports:
        - containerPort: 5050
          name: couchpotato-ui
      volumes:
      - name: downloads
        hostPath:
          path: /array/transmission/downloads
          type: DirectoryOrCreate
      - name: config
        hostPath:
          path: /array/couchpotato/config
          type: DirectoryOrCreate
      - name: movies
        hostPath:
          path: /array/couchpotato/movies
          type: DirectoryOrCreate
