kubernetes/media/couchpotato/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: couchpotato-ui
  namespace: couchpotato
spec:
  selector:
    app: couchpotato
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
