kubernetes/media/couchpotato/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: couchpotato
  namespace: couchpotato
spec:
  rules:
  - host: couchpotato.raspberrypi.lab
    http:
      paths:
      - backend:
          serviceName: couchpotato-ui
          servicePort: 5050
